Fix search bar not left-aligned with greeting

--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ header {
     grid-area: header;
     background-color: khaki;
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 3fr 2fr;
     grid-template-rows: 1fr 1fr;
     padding: 1em 3em;
     font-weight: bold;
@@ -44,7 +44,7 @@ header {
 .search-bar {
     display: grid;
     grid-auto-flow: column;
-    grid-template-columns: 10% 1fr;
+    grid-template-columns: max-content 1fr;
     --icon-w-h: 2em;
     align-items: center;
     justify-items: end;
